# many_circles

./: .clang-format  .gitignore  .gitmodules  README.md  main  meson.build  nob  nob.c  nob.exe.old  nob.old  plotting_abs.gp  plotting_imag.gp  plotting_real.gp
src/: bessel_func.c  bessel_func.h  circle.c  circle.h  extended_bessel.c  extended_bessel.h  initial_wave.h  main.c  many_circle_solv.c  many_circle_solv.h  single_circle_solv.c  single_circle_solv.h  single_layer.c  single_layer.h  utility.h
